# pi-forall

./: .gitignore  LICENSE  README  README.md  compose.md  compose15.pptx  notes.md  notes2.md  notes3.md  notes4.md
doc/: Makefile  README.md  bool.ott  data.ott  epsilon.ott  equality.v  let.ott  listproc.sty  lsthaskell.sty  lstparams.sty  lstpi.sty  notes.md  notes4.md  oplss.mng  ottalt.sty  pi-rules.tex  pi.ott  sigma.ott  template.ott  tyeq.ott  weirich.bib
full/: LICENSE  README.md  pi-forall.cabal  stack.yaml
full/app/: Main.hs
full/pi/: Blowup.pi  BoolLib.pi  Case.pi  Equal.pi  Equality.pi  Examples.pi  Fin.pi  Fin1.pi  Fix.pi  Hurkens.pi  HurkensEx.pi  Hw1.pi  Hw2.pi  IsProp.pi  Lambda.pi  Lambda0.pi  Lambda1.pi  Lambda2.pi  Lec1.pi  Lec2.pi  Lec3.pi  Lec4.pi  List.pi  Logic.pi  Makefile  Nat.pi  NatChurch.pi  NatChurchEx.pi  Or.pi  Ord.pi  Pi.pi  Product.pi  Product1.pi  Sigma.pi  Vec.pi  WFU.pi  WFUAnnot.pi
full/src/: Arbitrary.hs  Environment.hs  Equal.hs  LayoutToken.hs  LevelSolver.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
full/test/: Fin.pi  Hw1.pi  Hw2.pi  Lec1.pi  Logic.pi  Main.hs  Makefile  Nat.pi  Product.pi  Vec.pi
main/: Makefile  README.md  pi-forall.cabal  stack.yaml
main/pi/: BoolLib.pi  Equal.pi  Equality.pi  FinHw.pi  Fix.pi  Hw1.pi  Hw2.pi  Lambda.pi  Lambda0.pi  Lambda1.pi  Lec1.pi  Lec2.pi  Lec3.pi  Lec4.pi  Lennart.pi  Maybe.pi  Nat.pi  NatChurch.pi  Prelude.pi  Product.pi  Product1.pi  Sigma.pi  Vec.pi
main/src/: Arbitrary.hs  Compile.hs  Environment.hs  Equal.hs  Lexer.hs  Main.hs  Modules.hs  Parser.hs  PrettyPrint.hs  README  Syntax.hs  TODO  TypeCheck.hs
main/test/: Arbitrary.hs  BoolLib.pi  Equal.pi  Equality.pi  Fin1.pi  Lambda0.pi  Lambda1.pi  Lec1.pi  Lec4.pi  List.pi  Main.hs  Makefile  NatChurch.pi  Prelude.pi  Product1.pi
master/: Makefile  pi-forall.cabal
master/src/: Environment.hs  Equal.hs  LayoutToken.hs  Main.hs  Modules.hs  Parser.hs  PrettyPrint.hs  README  Syntax.hs  Syntax.lhs.old  TODO  TypeCheck.hs  dep.lhs  pi-forall.cabal
master/test/: Bool.pi  Fin.pi  Fin1.pi  Hw2.pi  Lambda.pi  Lambda0.pi  Lambda1.pi  Lambda2.pi  Lec1.pi  Lec2.pi  Lec3.pi  Lec4.pi  List.pi  Logic.pi  Nat.pi  NatChurch.pi  Product.pi  Vec.pi
old/: notes.md  notes3.md
soln/src/: Environment.hs  Equal.hs  LayoutToken.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
soln/test/: Fin.pi  Fin1.pi  Hw2.pi  Lec1.pi  Lec3.pi  Lec4.pi  Logic.pi  Makefile  Nat.pi  Product.pi  Vec.pi
src/: Environment.hs  Equal.hs  Main.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
test/: Equality.pi  Fin.pi  Makefile  Nat.pi  Product.pi  Vec.pi
version1/: README  pi-forall.cabal  stack.yaml
version1/app/: Main.hs
version1/pi/: Lec1.pi
version1/src/: Arbitrary.hs  Environment.hs  Equal.hs  LayoutToken.hs  Main.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
version1/test/: Hw1.pi  Lec1.pi  Main.hs
version2/: LICENSE  README.md  pi-forall.cabal  stack.yaml
version2/pi/: Hw1.pi  Hw2.pi  Lec1.pi  Lec2.pi  NatChurch.pi  Sigma.pi
version2/src/: Arbitrary.hs  Environment.hs  Equal.hs  Main.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
version2/test/: Hw2.pi  Lec1.pi  Lec2.pi  Main.hs  NatChurch.pi
version3/: Makefile  README.md  pi-forall.cabal
version3/pi/: Hw1.pi  Hw2.pi  Lec2.pi  Lec3.pi  NatChurch.pi
version3/src/: Arbitrary.hs  Environment.hs  Equal.hs  LayoutToken.hs  Main.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
version3/test/: Fin1.pi  Hw1.pi  Lec1.pi  Lec2.pi  Nat.pi
