cabal-Version: 2.2
name: pi-forall
version: 0.2
license: BSD-3-Clause
license-file: LICENSE
copyright: (c) 2013-2022 University of Pennsylvania
description: An implementation of a simple dependently typed language for OPLSS 2022
author: Stephanie Weirich <sweirich@cis.upenn.edu>, based on code by Trellys Team <trellys@...>
maintainer: Stephanie Weirich <sweirich@cis.upenn.edu>
build-type: Simple
tested-with: GHC == 8.10.7
category: Compilers/Interpreters
homepage: https://github.com/sweirich/pi-forall
synopsis: Demo implementation of typechecker for dependently-typed language

source-repository head
  type: git
  location: https://github.com/sweirich/pi-forall

common shared-properties
  default-language:
    Haskell2010
  ghc-options:
    -Wall -fno-warn-unused-matches -fno-warn-orphans -fno-warn-unused-top-binds -fno-warn-unused-imports
  default-extensions: 
    EmptyDataDecls
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts 
    FlexibleInstances 
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    ParallelListComp
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeSynonymInstances
    UndecidableInstances 
    ViewPatterns
  build-depends:  
    base >= 4 && < 5,
    parsec >= 3.1.8 && < 3.2,
    mtl >= 2.2.1,
    pretty >= 1.0.1.0,
    unbound-generics >= 0.2,
    transformers,
    array >= 0.3.0.2 && < 0.6,
    containers,
    directory,
    filepath,
    HUnit,
    QuickCheck
  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*      
 

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules: 
    Environment
    Equal
    LayoutToken
    Modules
    Parser
    PrettyPrint
    Syntax
    TypeCheck
    Arbitrary
  
executable pi-forall
  import: shared-properties
  build-depends: pi-forall
  hs-source-dirs: app
  main-is: Main.hs

test-suite test-pi-forall
  import: shared-properties
  build-depends: pi-forall
    , QuickCheck >= 2.13.2
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
